# NOUZ-MCP

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_EN.md  config.template.yaml  config.yaml  glama.json  guide.md  pyproject.toml  pytest.ini  pytest_smoke.py  requirements.txt  server.json  server.py  test_server.py
docs/: architecture-refactor.md
nouz_mcp/: README.md  __init__.py  _version.py  calc_etalons.py  chunks.py  config.py  links.py  markdown.py  modes.py  paths.py  pyproject.toml  semantics.py  serialization.py  server.json  server.py  signs.py  sqlite_store.py  use_cases.py  vault_io.py  vectors.py
nouz_mcp/nouz_mcp.egg-info/: PKG-INFO  SOURCES.txt
scripts/: benchmark_chunk_scoring.py  calc_etalons.py  release_check.py
