[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nouz-mcp"
version = "2.5.6"
description = "MCP server for Obsidian — semantic knowledge graph with auto-classification, DAG hierarchy, and cross-domain bridge detection"
readme = "README_EN.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Semiotronika", email = "belkinamariaigorevna@yandex.ru"}
]
keywords = ["mcp", "obsidian", "knowledge-graph", "semantic-classification", "rag", "llm", "notes", "pkm", "embeddings", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "aiofiles>=23.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://semiotronika.ru"
Repository = "https://github.com/Semiotronika/NOUZ-MCP"
Documentation = "https://github.com/Semiotronika/NOUZ-MCP#readme"
"Bug Tracker" = "https://github.com/Semiotronika/NOUZ-MCP/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nouz-mcp = "nouz_mcp.server:main"

[tool.setuptools]
packages = ["nouz_mcp"]
