[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nouz-mcp"
version = "2.1.2"
description = "Unified MCP Server for Obsidian - graph-based note management with semantic classification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "KVANTRA-dev", email = "your-email@example.com"}
]
keywords = ["mcp", "obsidian", "knowledge-graph", "semantic-classification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiofiles>=23.0.0",
    "frontmatter>=3.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nouz-mcp = "nouz_mcp.server:main"

[tool.setuptools]
packages = ["nouz_mcp"]
